# ChangeLog for dev-db/pgaccess
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/pgaccess/Attic/ChangeLog,v 1.6 2004/06/24 21:58:59 agriffis Exp $

*pgaccess-0.98.8 (18 Mar 2003)

  06 Jun 2003; Masatomo Nakano <nakano@gentoo.org> pgaccess-0.98.8.ebuild:
  added message.

  27 Mar 2003; Masatomo Nakano <nakano@gentoo.org> pgaccess-0.98.8.ebuild

  Marked as stable.

  24 Mar 2003; Masatomo Nakano <nakano@gentoo.org> pgaccess-0.98.8.ebuild

  Fixed bug. #17668

  18 Mar 2003; Masatomo Nakano <nakano@gentoo.org> pgaccess-0.98.8.ebuild,
  files/pgaccess-0.98.8.patch:

  Fixed bug. #17668

  18 Mar 2003; Masatomo Nakano <nakano@gentoo.org> pgaccess-0.98.8.ebuild,
  files/pgaccess-0.98.8.patch:

  Initial import.  Ebuild submitted by Dirk Heinrichs 
  <ext-dirk.heinrichs@nokia.com>.
