@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/pgpool/Attic/pgpool-1.1.ebuild,v 1.3 2004/06/24 21:59:36 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/pgpool/Attic/pgpool-1.1.ebuild,v 1.4 2004/06/29 17:15:10 agriffis Exp $
 
 DESCRIPTION="Connection pool server for PostgreSQL"
 SRC_URI="ftp://ftp.sra.co.jp/pub/cmd/postgres/pgpool/${P}.tar.gz"
@@ -25,4 +25,3 @@ src_install () {
 	exeinto /etc/init.d
 	newexe ${FILESDIR}/${PN}.init ${PN}
 }
-
