@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/pgpool
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/pgpool/Attic/ChangeLog,v 1.6 2004/06/24 21:59:36 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/pgpool/Attic/ChangeLog,v 1.7 2004/06/29 17:15:10 agriffis Exp $
+
+  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> pgpool-1.1.ebuild,
+  pgpool-1.2.3.ebuild:
+  trim trailing whitespace
 
   13 Jun 2004; Masatomo Nakano <nakano@gentoo.org> :
   Version bump.
